--- a/topdev-blog/package.json
+++ b/topdev-blog/package.json
@@ -13,6 +13,7 @@
     "eslint-config-next": "13.3.0",
     "grapesjs": "^0.21.1",
     "grapesjs-preset-webpage": "^1.0.2",
+    "html-react-parser": "^3.0.15",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
