--- a/topdev-blog/package.json
+++ b/topdev-blog/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "grapesjs": "^0.21.1",
     "grapesjs-preset-webpage": "^1.0.2",
     "html-react-parser": "^3.0.15",
+    "mongoose": "^7.0.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
