--- a/topdev-blog/package.json
+++ b/topdev-blog/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
@@ -18,6 +19,7 @@
     "mongoose": "^7.0.3",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.3",
     "react-dom": "18.2.0"
   }
 }
