--- a/topdev-blog/package.json
+++ b/topdev-blog/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "eslint": "8.37.0",
@@ -16,6 +17,8 @@
     "grapesjs": "^0.21.1",
     "grapesjs-preset-webpage": "^1.0.2",
     "html-react-parser": "^3.0.15",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
     "react": "18.2.0",
