--- a/topdev-blog/package.json
+++ b/topdev-blog/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
@@ -21,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
+    "next-share": "^0.20.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "18.2.0"
