--- a/topdev-blog/package.json
+++ b/topdev-blog/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "@react-three/drei": "^9.11.3",
+    "@react-three/fiber": "^8.0.22",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
@@ -29,6 +31,10 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "three": "^0.141.0"
+  },
+  "devDependencies": {
+    "next-transpile-modules": "^10.0.0"
   }
 }
