--- a/topdev-blog/package.json
+++ b/topdev-blog/package.json
@@ -25,6 +25,7 @@
     "html-react-parser": "^3.0.15",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
     "next-share": "^0.20.0",
